--- a/SportsStore/WebUI/Views/Product/List.cshtml
+++ b/SportsStore/WebUI/Views/Product/List.cshtml
@@ -1,14 +1,19 @@
-﻿@model IEnumerable<Domain.Entities.Product>
+﻿@using WebUI.HtmlHelpers
+@model WebUI.Models.ProductListViewModel
 
 @{
     ViewBag.Title = "Products";
 }
 
-@foreach (var p in Model)
+@foreach (var p in Model.Products)
 {
     <div class="item">
         <h3>@p.Name</h3>
-        @p.Description;
+        @p.Description
         <h4>@p.Price.ToString("c")</h4>
     </div>
 }
+
+<div class="pager">
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List",new {page = x}))
+</div>
